# py-admetric

./: .gitignore  README.md  setup.cfg
py_admetric/: py_admetric.py
tests/: test_py_admetric.py  test_utils.py
