[metadata]
name = py-admetric
version = 0.0.1
description = Provide calculation methods often used in digital advertising industry
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = otomikesuy
author_email = otomikesuy@gmail.com
url = https://github.com/otomikesuy/py-admetric

[options]
package_dir = py_admetric
packages = find:
test_suite = tests

[options.packages.find]
exclude =
    tests
    docs
