[metadata]
name = py-admetric
version = 0.0.1
description = Provide calculation methods often used in digital advertising industry
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = otomikesuy
url = https://github.com/otomikesuy/py-admetric

[options]
packages = find:
test_suite = tests
python_requires = >=3.9.5

[options.packages.find]
exclude =
    tests
    docs
